--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   border:2px solid black ;
 }
   </style>
+  
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -18,7 +19,7 @@
     <!-- 3 -->
     <h1>אלעד שגיב</h1>
     <!-- 4 -->
-    <img src="https://imagizer.imageshack.com/img924/7505/SGpKJ1.jpg"
+    <img src="https://imagizer.imageshack.com/img923/354/8RdVwS.jpg"
     alt="picture" width="370" height="300">
   <br>
   <a href=mailto:eladsag123@gmail.com>eladsag123@gmail.com</a><br>
@@ -29,7 +30,8 @@
    כשראיתי שניתן להירשם לקורס פיתוח ווב ידעתי שזאת הזדמנות שאיני יכול לפספס ולכן עליי להירשם לקורס על מנת שאוכל לרכוש ידע בשפת Javascript.<br>
 החלום שלי הוא להשתלב בעולם הייטק ובכלל לעבוד במקצוע שלמדתי בו והוא מדעי המחשב לכן אשמח לרכוש ידע ככל שאפשר לקראת היציאה לריאונות העבודה.
 </p>
-<h2>דברים אהובים ועוד</h2>
+<h2> דברים אהובים ועוד🤩</h2>
+
 <!-- 6 -->
 <table style="width:100%">
   <tr>
